--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -103,7 +103,7 @@
     <color name="purple">#800080</color> <!-- 紫色 -->
     <color name="maroon">#800000</color> <!-- 粟色 -->
     <color name="aquamarine">#7fffd4</color> <!-- 碧绿色 -->
-    <color name="chartreuse">#7fff00</color> <!-- 黄绿色 -->
+    <color name="chartreuse">#7FFF00</color> <!-- 黄绿色 -->
     <color name="lawngreen">#7cfc00</color> <!-- 草绿色 -->
     <color name="mediumslateblue">#7b68ee</color> <!-- 中暗蓝色 -->
     <color name="lightslategray">#778899</color> <!-- 亮蓝灰 -->
