--- a/app/src/main/res/layout/activity_registered.xml
+++ b/app/src/main/res/layout/activity_registered.xml
@@ -70,7 +70,7 @@
         android:layout_marginRight="8dp"
         android:ems="10"
         android:hint="请输入地址"
-        android:inputType="phone"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/text"
@@ -87,7 +87,7 @@
         android:layout_marginRight="8dp"
         android:ems="10"
         android:hint="请输入姓名"
-        android:inputType="phone"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/text"
