--- a/app/src/main/res/layout/activity_change_infor.xml
+++ b/app/src/main/res/layout/activity_change_infor.xml
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView10" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/edit_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -66,14 +66,14 @@
         app:layout_constraintTop_toTopOf="@+id/imageView15" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/edit_tel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="请输入电话号"
         android:inputType="phone"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
-        app:layout_constraintEnd_toEndOf="@+id/editText"
+        app:layout_constraintEnd_toEndOf="@+id/edit_username"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="@+id/textView2" />
 
@@ -102,15 +102,15 @@
         app:layout_constraintTop_toTopOf="@+id/imageView16" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/edit_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="请输入地址"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="@+id/textView8"
-        app:layout_constraintEnd_toEndOf="@+id/editText2"
-        app:layout_constraintStart_toStartOf="@+id/editText2"
+        app:layout_constraintEnd_toEndOf="@+id/edit_tel"
+        app:layout_constraintStart_toStartOf="@+id/edit_tel"
         app:layout_constraintTop_toTopOf="@+id/textView8" />
 
     <ImageView
@@ -138,15 +138,15 @@
         app:layout_constraintTop_toTopOf="@+id/imageView17" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/edit_pass1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="请输入密码"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="@+id/textView35"
-        app:layout_constraintEnd_toEndOf="@+id/editText3"
-        app:layout_constraintStart_toStartOf="@+id/editText3"
+        app:layout_constraintEnd_toEndOf="@+id/edit_address"
+        app:layout_constraintStart_toStartOf="@+id/edit_address"
         app:layout_constraintTop_toTopOf="@+id/textView35" />
 
     <ImageView
@@ -174,19 +174,19 @@
         app:layout_constraintTop_toTopOf="@+id/imageView18" />
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/edit_pass2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="请确认密码"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="@+id/textView37"
-        app:layout_constraintEnd_toEndOf="@+id/editText4"
-        app:layout_constraintStart_toStartOf="@+id/editText4"
+        app:layout_constraintEnd_toEndOf="@+id/edit_pass1"
+        app:layout_constraintStart_toStartOf="@+id/edit_pass1"
         app:layout_constraintTop_toTopOf="@+id/textView37" />
 
     <Button
-        android:id="@+id/button28"
+        android:id="@+id/btn_sure"
         android:layout_width="184dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
