--- a/app/src/main/res/layout/activity_palce.xml
+++ b/app/src/main/res/layout/activity_palce.xml
@@ -8,13 +8,12 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="324dp"
-        android:layout_height="554dp"
+        android:layout_width="291dp"
+        android:layout_height="408dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
 
         <LinearLayout
@@ -281,11 +280,11 @@
         android:id="@+id/linearLayout2"
         android:layout_width="73dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
         app:layout_constraintTop_toTopOf="@+id/linearLayout">
 
         <LinearLayout
@@ -464,7 +463,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="1场北半篮"
+            android:text="2场北半篮"
             android:textStyle="bold" />
 
         <TextView
@@ -472,7 +471,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="2场南半蓝"
+            android:text="3场南半蓝"
             android:textStyle="bold" />
 
         <TextView
@@ -480,7 +479,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="2场北半篮"
+            android:text="4场北半篮"
             android:textStyle="bold" />
     </LinearLayout>
 
