--- a/app/src/main/res/layout/order.xml
+++ b/app/src/main/res/layout/order.xml
@@ -77,27 +77,16 @@
         app:layout_constraintTop_toBottomOf="@+id/placeId" />
 
     <Button
-        android:id="@+id/button26"
+        android:id="@+id/ask"
         android:layout_width="wrap_content"
         android:layout_height="39dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/shape1"
         android:text="咨询"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button27"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name" />
 
-    <Button
-        android:id="@+id/button27"
-        android:layout_width="wrap_content"
-        android:layout_height="39dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/shape1"
-        android:text="订单分享"
-        app:layout_constraintBottom_toBottomOf="@+id/button26"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/button26" />
 </androidx.constraintlayout.widget.ConstraintLayout>
