--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,7 +45,7 @@
     <color name="beige">#f5f5dc</color> <!-- 米色 -->
     <color name="wheat">#f5deb3</color> <!-- 浅黄色 -->
     <color name="sandybrown">#f4a460</color> <!-- 沙褐色 -->
-    <color name="azure">#f0ffff</color> <!-- 天蓝色 -->
+    <color name="azure">#F0FFFF</color> <!-- 天蓝色 -->
     <color name="honeydew">#f0fff0</color> <!-- 蜜色 -->
     <color name="aliceblue">#f0f8ff</color> <!-- 艾利斯兰 -->
     <color name="khaki">#f0e68c</color> <!-- 黄褐色 -->
@@ -98,7 +98,6 @@
     <color name="lightskyblue">#87cefa</color> <!-- 亮天蓝色 -->
     <color name="skyblue">#87ceeb</color> <!-- 天蓝色 -->
     <color name="gray">#808080</color> <!-- 灰色 -->
-    <color name="grey">#808080</color> <!-- 灰色 -->
     <color name="olive">#808000</color> <!-- 橄榄色 -->
     <color name="purple">#800080</color> <!-- 紫色 -->
     <color name="maroon">#800000</color> <!-- 粟色 -->
